2009-10-05  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryParameterDataProvider.cs: fixed extension
	  methods output.

2009-10-02  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Fixed 'typeof (' context
	  (primitive types were missing).

2009-10-01  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic:
	* Gui/CodeGenerationPanel.cs:
	* Project/CSharpCompilerParameters.cs:
	* gtk-gui/CSharpBinding.CodeGenerationPanelWidget.cs: Allow
	  setting the platform target.

2009-09-30  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorIndentation.cs: Fixed tab as reindent.

2009-09-30  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: Fixed 'Bug 542976 - Type
	  resolution problem'.

2009-09-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.CSharp.Parser\CSharpParser.cs: Mono.CSharp is
	  not available on windows.

2009-09-29  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorIndentation.cs:
	* FormattingStrategy/CSharpIndentEngine.cs: Optimized indent
	  engine.

	* Parser/NRefactoryParser.cs: Fields now get their body region
	  set to the variable declaration bounds (required for looking
	  up in multiple field declaration: Type field1, field2,
	  field3;).

2009-09-28  Mike Krüger  <mkrueger@novell.com>

	* CSharpBindingCompilerManager.cs: Used correct context.

2009-09-28  Mike Krüger  <mkrueger@novell.com>

	* CSharpBindingCompilerManager.cs: Building packages that have
	  required packages now works.

2009-09-25  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* CSharpBinding.csproj:
	* MonoDevelop.CSharp.Parser:
	* MonoDevelop.CSharp.Parser/CSharpParser.cs:
	* MonoDevelop.CSharp.Dom/ICSharpDomVisitor.cs:
	* MonoDevelop.CSharp.Dom/GeneralScope/TypeDeclaration.cs:
	* MonoDevelop.CSharp.Dom/GeneralScope/EnumDeclaration.cs:
	  Added enumdeclaration node.

2009-09-25  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Dom/GeneralScope/AttributeSection.cs: