@@ -1,5 +1,10 @@
 2009-10-05  Mike Krüger  <mkrueger@novell.com>
 
+	* Gui/CSharpTextEditorCompletion.cs: Use IsAccessibleFrom
+	  method in override completion.
+
+2009-10-05  Mike Krüger  <mkrueger@novell.com>
+
 	* Gui/NRefactoryParameterDataProvider.cs: fixed extension
 	  methods output.
 
